Added support for JDK 8